# flutter-lan-fileshare

./: .gitignore  LICENSE  README.md  pubspec.yaml
lib/: main.dart
lib/pages/: log_page.dart  settings_page.dart  web_server_page.dart
lib/services/: log_service.dart  settings_service.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  main.cpp
